--- a/v-admin.css
+++ b/v-admin.css
@@ -3,6 +3,13 @@
     margin-bottom: 10px;
     margin-right: 10px;
 }
+html body {
+    background: transparent;
+}
+.ivu-btn>.ivu-icon {
+    transform: scale(1.8);
+    min-width: .1em;
+}
 
 .mo-paging,
 .mo-paging input {
